Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "a9236e923f53f43158ab7ed4f173128d-595673911.us-east-1.elb.amazonaws.com" # LB DNS name as I don't have DNS name
      http:
        paths:
          - pathType: Prefix
            path: "/dev"
            backend:         
              service:
                name: frontend-service-dev
                port:
                  number: 80
          - pathType: Prefix
            path: "/prod"
            backend:         
              service:
                name: frontend-service-prod
                port:
                  number: 80
